--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -26,8 +26,18 @@
         android:label="fragment_about"
         tools:layout="@layout/fragment_about" />
     <fragment
+        android:id="=@+id/produkFormFragment"
+        android:name="com.pcs.apptoko.ProdukFormFragment"
+        android:label="fragment_produk_form"
+        tools:layout="@layout/fragment_produk_form">
+        <argument
+            android:name="argsProduk"
+            app:argType="com.pcs.apptoko.response.produk.Produk"
+            app:nullable="true"/>
+    </fragment>
+    <fragment
         android:id="@+id/bayarFragment"
         android:name="com.pcs.apptoko.BayarFragment"
         android:label="fragment_bayar"
-        tools:layout="@layout/fragment_bayar" />
+        tools:layout="@layout/fragment_bayar" >
 </navigation>
